# paramagnet_interaction_cpp

./: CMakeLists.txt  CMakeListsLocal.txt  CMakeListsRemote.bkp  README.md  bandUnfoldingAndC.cpp  checkEAll.py  checkVec.py  checksVecVec.py  dbExchangeModel.cpp  dbExchangeModel.hpp  generateFiles.py  group0.csv  group1.csv  ks.cpp  main.cpp  mainserial.cpp  oneChi.py  parseCSV.py  plt.py  pltBands.py  pltC.py  pltChi.py  plt_s.py  readEAllAndsAll.py  reader.cpp  s2Eigen.cpp  s2Eigen.hpp  sAvg.cpp  sAvg.hpp  testDB.cpp
